--- a/internal/projects/bulleit/Stamped/CreateStampViewController.xib
+++ b/internal/projects/bulleit/Stamped/CreateStampViewController.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">11A511</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1900</string>
+		<string key="IBDocument.SystemVersion">11B26</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1923</string>
 		<string key="IBDocument.AppKitVersion">1138</string>
 		<string key="IBDocument.HIToolboxVersion">566.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">894</string>
+			<string key="NS.object.0">919</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -147,7 +147,7 @@
 									<object class="IBUIView" id="483849353">
 										<reference key="NSNextResponder" ref="101741781"/>
 										<int key="NSvFlags">274</int>
-										<string key="NSFrame">{{0, 4}, {310, 195}}</string>
+										<string key="NSFrame">{{0, 4}, {310, 152}}</string>
 										<reference key="NSSuperview" ref="101741781"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="234167628"/>
@@ -199,7 +199,7 @@
 												<string key="NSFrame">{{77, 7}, {215, 19}}</string>
 												<reference key="NSSuperview" ref="234167628"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="977492604"/>
+												<reference key="NSNextKeyView" ref="312603011"/>
 												<string key="NSReuseIdentifierKey">_NS:129</string>
 												<object class="NSColor" key="IBUIBackgroundColor" id="935530847">
 													<int key="NSColorSpace">3</int>
@@ -279,7 +279,7 @@
 									<object class="IBUIImageView" id="1027667012">
 										<reference key="NSNextResponder" ref="101741781"/>
 										<int key="NSvFlags">268</int>
-										<string key="NSFrame">{{10, 168}, {20, 10}}</string>
+										<string key="NSFrame">{{10, 125}, {20, 10}}</string>
 										<reference key="NSSuperview" ref="101741781"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="249527600"/>
@@ -292,37 +292,13 @@
 											<string key="NSResourceName">credit_icon@2x.png</string>
 										</object>
 									</object>
-									<object class="IBUILabel" id="626503621">
-										<reference key="NSNextResponder" ref="101741781"/>
-										<int key="NSvFlags">268</int>
-										<string key="NSFrame">{{34, 120}, {70, 17}}</string>
-										<reference key="NSSuperview" ref="101741781"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="729009986"/>
-										<string key="NSReuseIdentifierKey">_NS:129</string>
-										<bool key="IBUIOpaque">NO</bool>
-										<bool key="IBUIClipsSubviews">YES</bool>
-										<int key="IBUIContentMode">7</int>
-										<bool key="IBUIUserInteractionEnabled">NO</bool>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<string key="IBUIText">Add a photo</string>
-										<object class="NSColor" key="IBUITextColor">
-											<int key="NSColorSpace">2</int>
-											<bytes key="NSRGB">MC43NDkwMTk2MjI4IDAuNzQ5MDE5NjIyOCAwLjc0OTAxOTYyMjgAA</bytes>
-										</object>
-										<nil key="IBUIHighlightedColor"/>
-										<int key="IBUIBaselineAdjustment">1</int>
-										<float key="IBUIMinimumFontSize">10</float>
-										<reference key="IBUIFontDescription" ref="782984772"/>
-										<reference key="IBUIFont" ref="461654039"/>
-									</object>
 									<object class="IBUILabel" id="249527600">
 										<reference key="NSNextResponder" ref="101741781"/>
 										<int key="NSvFlags">268</int>
-										<string key="NSFrame">{{34, 164}, {70, 17}}</string>
+										<string key="NSFrame">{{34, 121}, {70, 17}}</string>
 										<reference key="NSSuperview" ref="101741781"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="312603011"/>
+										<reference key="NSNextKeyView" ref="464865782"/>
 										<string key="NSReuseIdentifierKey">_NS:129</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -343,10 +319,10 @@
 									<object class="IBUITextField" id="312603011">
 										<reference key="NSNextResponder" ref="101741781"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{84, 157}, {226, 31}}</string>
+										<string key="NSFrame">{{10, 114}, {300, 31}}</string>
 										<reference key="NSSuperview" ref="101741781"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="464865782"/>
+										<reference key="NSNextKeyView" ref="1027667012"/>
 										<string key="NSReuseIdentifierKey">_NS:217</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -369,26 +345,10 @@
 										<reference key="IBUIFontDescription" ref="481751809"/>
 										<reference key="IBUIFont" ref="532721506"/>
 									</object>
-									<object class="IBUIImageView" id="977492604">
-										<reference key="NSNextResponder" ref="101741781"/>
-										<int key="NSvFlags">268</int>
-										<string key="NSFrame">{{13, 123}, {14, 11}}</string>
-										<reference key="NSSuperview" ref="101741781"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="626503621"/>
-										<string key="NSReuseIdentifierKey">_NS:363</string>
-										<int key="IBUIContentMode">1</int>
-										<bool key="IBUIUserInteractionEnabled">NO</bool>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<object class="NSCustomResource" key="IBUIImage">
-											<string key="NSClassName">NSImage</string>
-											<string key="NSResourceName">photo_icon@2x.png</string>
-										</object>
-									</object>
 									<object class="IBUIImageView" id="464865782">
 										<reference key="NSNextResponder" ref="101741781"/>
 										<int key="NSvFlags">266</int>
-										<string key="NSFrame">{{0, 199}, {310, 4}}</string>
+										<string key="NSFrame">{{0, 156}, {310, 4}}</string>
 										<reference key="NSSuperview" ref="101741781"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="126407021"/>
@@ -401,24 +361,10 @@
 											<string key="NSResourceName">stamp_detail_ripple_bottom</string>
 										</object>
 									</object>
-									<object class="IBUIView" id="729009986">
-										<reference key="NSNextResponder" ref="101741781"/>
-										<int key="NSvFlags">271</int>
-										<string key="NSFrame">{{0, 151}, {310, 1}}</string>
-										<reference key="NSSuperview" ref="101741781"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="1027667012"/>
-										<string key="NSReuseIdentifierKey">_NS:49</string>
-										<object class="NSColor" key="IBUIBackgroundColor">
-											<int key="NSColorSpace">1</int>
-											<bytes key="NSRGB">MC45MTEwMDU0MzQ4IDAuOTExMDA1NDM0OCAwLjkxMTAwNTQzNDgAA</bytes>
-										</object>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-									</object>
 									<object class="IBUIView" id="126407021">
 										<reference key="NSNextResponder" ref="101741781"/>
 										<int key="NSvFlags">266</int>
-										<string key="NSFrame">{{0, 203}, {310, 1}}</string>
+										<string key="NSFrame">{{0, 160}, {310, 1}}</string>
 										<reference key="NSSuperview" ref="101741781"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="851464612"/>
@@ -426,7 +372,7 @@
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 								</object>
-								<string key="NSFrame">{{5, 72}, {310, 204}}</string>
+								<string key="NSFrame">{{5, 72}, {310, 161}}</string>
 								<reference key="NSSuperview" ref="870662028"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="829180822"/>
@@ -617,28 +563,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="739928940"/>
-						<reference key="destination" ref="372490531"/>
-					</object>
-					<int key="connectionID">67</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">bottomToolbar</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="851464612"/>
 					</object>
 					<int key="connectionID">78</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">backOrCancelButtonPressed:</string>
-						<reference key="source" ref="925463886"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">86</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -647,15 +576,6 @@
 						<reference key="destination" ref="870662028"/>
 					</object>
 					<int key="connectionID">87</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">saveStampButtonPressed:</string>
-						<reference key="source" ref="573052172"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">88</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -691,19 +611,45 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="312603011"/>
-						<reference key="destination" ref="372490531"/>
-					</object>
-					<int key="connectionID">101</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">creditTextField</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="312603011"/>
 					</object>
 					<int key="connectionID">102</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="739928940"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">67</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">backOrCancelButtonPressed:</string>
+						<reference key="source" ref="925463886"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">86</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">saveStampButtonPressed:</string>
+						<reference key="source" ref="573052172"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">88</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="312603011"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">101</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -799,10 +745,7 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="249527600"/>
-							<reference ref="626503621"/>
-							<reference ref="977492604"/>
 							<reference ref="1027667012"/>
-							<reference ref="729009986"/>
 							<reference ref="829180822"/>
 							<reference ref="126407021"/>
 							<reference ref="464865782"/>
@@ -820,28 +763,10 @@
 						<string key="objectName">Give Credit Label</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">71</int>
-						<reference key="object" ref="626503621"/>
-						<reference key="parent" ref="101741781"/>
-						<string key="objectName">Add Photo Label</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">70</int>
-						<reference key="object" ref="977492604"/>
-						<reference key="parent" ref="101741781"/>
-						<string key="objectName">Photo Image View</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">69</int>
 						<reference key="object" ref="1027667012"/>
 						<reference key="parent" ref="101741781"/>
 						<string key="objectName">Credit Image View</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">68</int>
-						<reference key="object" ref="729009986"/>
-						<reference key="parent" ref="101741781"/>
-						<string key="objectName">Middle border</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">41</int>
@@ -933,6 +858,7 @@
 					<string>-2.IBPluginDependency</string>
 					<string>1.IBPluginDependency</string>
 					<string>10.IBPluginDependency</string>
+					<string>100.CustomClassName</string>
 					<string>100.IBPluginDependency</string>
 					<string>36.IBPluginDependency</string>
 					<string>36.IBUserGuides</string>
@@ -946,10 +872,7 @@
 					<string>48.IBPluginDependency</string>
 					<string>52.IBPluginDependency</string>
 					<string>64.IBPluginDependency</string>
-					<string>68.IBPluginDependency</string>
 					<string>69.IBPluginDependency</string>
-					<string>70.IBPluginDependency</string>
-					<string>71.IBPluginDependency</string>
 					<string>72.IBPluginDependency</string>
 					<string>73.IBPluginDependency</string>
 					<string>79.IBPluginDependency</string>
@@ -968,6 +891,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>STCreditTextField</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSMutableArray">
@@ -980,9 +904,6 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UserImageView</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1075,7 +996,7 @@
 							<string>UIButton</string>
 							<string>UIImageView</string>
 							<string>UIButton</string>
-							<string>UITextField</string>
+							<string>STCreditTextField</string>
 							<string>UILabel</string>
 							<string>UILabel</string>
 							<string>UITextView</string>
@@ -1126,7 +1047,7 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">creditTextField</string>
-								<string key="candidateClassName">UITextField</string>
+								<string key="candidateClassName">STCreditTextField</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">detailLabel</string>
@@ -1172,6 +1093,14 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">STCreditTextField</string>
+					<string key="superclassName">UITextField</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/STCreditTextField.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">UserImageView</string>
 					<string key="superclassName">UIView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -1194,7 +1123,6 @@
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>credit_icon@2x.png</string>
-				<string>photo_icon@2x.png</string>
 				<string>shelf_background.png</string>
 				<string>stamp_detail_ripple_bottom</string>
 				<string>stamp_detail_ripple_top</string>
@@ -1204,7 +1132,6 @@
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{30, 20}</string>
-				<string>{27, 22}</string>
 				<string>{320, 240}</string>
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
@@ -1212,6 +1139,6 @@
 				<string>{16, 16}</string>
 			</object>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">894</string>
+		<string key="IBCocoaTouchPluginVersion">919</string>
 	</data>
 </archive>
